--- a/zp/timeline-unified.html
+++ b/zp/timeline-unified.html
@@ -938,6 +938,18 @@
             gap: 8px;
         }
 
+        .assign-stock.complete {
+            background: linear-gradient(135deg, #22c55e, #16a34a);
+            border-color: #15803d;
+            color: #f0fdf4;
+            box-shadow: 0 0 0 1px rgba(34, 197, 94, 0.35), 0 6px 12px rgba(22, 163, 74, 0.35);
+        }
+
+        .assign-stock.complete .assign-token {
+            background: linear-gradient(180deg, #4ade80, #22c55e);
+            color: #064e3b;
+        }
+
         .assign-token {
             display: inline-flex;
             align-items: center;
@@ -1018,14 +1030,15 @@
             background: #ffffff;
             border: 1px solid #e5e7eb;
             border-radius: 6px;
-            padding: 12px;
-            font-size: 12px;
-            line-height: 1.4;
+            padding: 16px 14px;
+            font-size: 14px;
+            line-height: 1.5;
+            margin-bottom: 14px;
         }
 
         .assign-reservation-info h4 {
             margin: 0 0 8px 0;
-            font-size: 13px;
+            font-size: 16px;
             font-weight: 600;
             color: #374151;
             border-bottom: 1px solid #e5e7eb;
@@ -1039,14 +1052,16 @@
         }
 
         .assign-reservation-info .info-label {
-            font-weight: 500;
-            color: #6b7280;
-            min-width: 60px;
+            font-weight: 600;
+            color: #4b5563;
+            min-width: 72px;
+            font-size: 13px;
         }
 
         .assign-reservation-info .info-value {
-            color: #111827;
+            color: #1f2937;
             flex: 1;
+            font-size: 14px;
         }
 
         .assign-reservation-info .info-categories {
@@ -1060,7 +1075,7 @@
             color: #374151;
             padding: 2px 6px;
             border-radius: 3px;
-            font-size: 11px;
+            font-size: 12px;
         }
 
         .assign-ablage-rooms {
@@ -1458,6 +1473,9 @@
         <div class="assign-card" role="dialog" aria-modal="true" aria-labelledby="assignTitle">
             <div class="assign-body">
                 <div class="assign-sidebar">
+                    <div id="assignReservationInfo" class="assign-reservation-info">
+                        <!-- Reservierungsdetails werden hier eingefügt -->
+                    </div>
                     <div id="assignStock" class="assign-stock">
                         <div>zu Disponieren</div>
                         <div id="assignToken" class="assign-token" title="Ziehen, um 1 Einheit zuzuweisen">0</div>
@@ -1468,7 +1486,7 @@
                             <div id="kpiAssigned" class="value">0</div>
                         </div>
                         <div class="assign-kpi">
-                            <div class="label">Verfügbar</div>
+                            <div class="label">Benötigt</div>
                             <div id="kpiRemaining" class="value">0</div>
                         </div>
                     </div>
@@ -1480,9 +1498,6 @@
                         <div class="button-row-2">
                             <button id="assignCancel" class="assign-btn">Cancel</button>
                         </div>
-                    </div>
-                    <div id="assignReservationInfo" class="assign-reservation-info">
-                        <!-- Reservierungsdetails werden hier eingefügt -->
                     </div>
                     <div id="assignAblageRooms" class="assign-ablage-rooms">
                         <!-- Ablage-Zimmer werden hier eingefügt -->
@@ -1906,6 +1921,7 @@
             const reservationInfo = document.getElementById('assignReservationInfo');
             const kpiAssigned = document.getElementById('kpiAssigned');
             const kpiRemaining = document.getElementById('kpiRemaining');
+            const assignStock = document.getElementById('assignStock');
             const btnCancel = document.getElementById('assignCancel');
             const btnSave = document.getElementById('assignSave');
             const btnReset = document.getElementById('assignReset');
@@ -2697,6 +2713,10 @@
                 token.textContent = String(r);
                 token.style.opacity = r > 0 ? '1' : '0.5';
                 token.style.pointerEvents = r > 0 ? 'auto' : 'none';
+                if (assignStock) {
+                    const requiredTotal = Number(current?.required || 0);
+                    assignStock.classList.toggle('complete', requiredTotal > 0 && r <= 0);
+                }
 
                 // Refresh disabled state on all rooms (based on latest remaining/assigned)
                 gridInner.querySelectorAll('.assign-room').forEach((wrap) => {
