feat: enhance room assignment functionality with pointer modality detection and improved command handling

--- a/zp/timeline-unified.html
+++ b/zp/timeline-unified.html
@@ -751,7 +751,7 @@
             justify-content: center;
             min-width: 20px;
             height: 14px;
-            border-radius: 7px;
+            border-radius: 2px;
             font-size: 9px;
             font-weight: 600;
             color: #fff;
@@ -836,16 +836,7 @@
         }
 
         .assign-bar-label {
-            position: absolute;
-            inset: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            color: #0f172a;
-            text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);
-            pointer-events: none;
-            font-size: 11px;
+            display: none !important;
         }
 
         .assign-bar-cap {
